actualizacion de proyectos

--- a/index.html
+++ b/index.html
@@ -51,9 +51,31 @@
 
     <!-- Featured Projects Section -->
     <section id="featured-projects">
-        <h2>Proyectos en los que participé</h2>
-        <p>Algunos de los proyectos en los que trabajé</p>
-    
+      <h2>Proyectos en los que participé</h2>
+      <p>Algunos de los proyectos en los que trabajé</p>
+  
+      <div class="project">
+          <div class="project-card">
+              <img src="images/proyectos/Captura de pantalla de 2025-01-20 21-16-20.png" alt="Project Screenshot">
+          </div>
+          <div class="project-text">
+              <h3>Webpage para Pastelería</h3>
+              <p>Diseño y desarrollo de la página web oficial de Rose Pattiserie, una pastelería boutique que combina elegancia y sabor en cada uno de sus productos. El objetivo principal del proyecto fue crear un sitio web que transmita la esencia premium de la marca. Proyecto en curso</p>
+              <div class="project-info">
+                  <div class="info-bar">Año: 2025</div>
+                  <div class="info-bar">Rol: Front-end Developer</div>
+                  <div class="info-bar">Tech Stack: HTML, CSS, JavaScript</div>
+              </div>
+              <div class="project-buttons">
+                <a href="https://dediosdi.github.io/RosePattiserie/" target="_blank" class="button live-demo-button">Live Demo</a>
+                <a href="https://github.com/dediosdi/RosePattiserie" target="_blank" class="button github-button">See on GitHub</a>
+              </div>
+          </div>
+      </div>
+      
+  </section>
+
+    <section id="featured-projects">
         <div class="project">
             <div class="project-card">
                 <img src="images/proyectos/Captura de pantalla de 2025-01-16 15-40-29.png" alt="Project Screenshot">
